--- a/app/src/main/res/layout/packages_list_item.xml
+++ b/app/src/main/res/layout/packages_list_item.xml
@@ -43,16 +43,36 @@
                     android:layout_marginEnd="20dp"
                     android:orientation="vertical"
                     tools:ignore="UselessParent">
-
-                    <androidx.appcompat.widget.AppCompatTextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="Package name"
-                        android:textColor="@color/white"
-                        android:textSize="22sp"
-                        app:fontFamily="@font/nunito_bold"
-                        tools:ignore="HardcodedText" />
+                        android:layout_height="wrap_content">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/pac_name"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_alignParentStart="true"
+                            android:text="Package name"
+                            android:textColor="@color/white"
+                            android:textSize="22sp"
+                            app:fontFamily="@font/nunito_bold"
+                            tools:ignore="HardcodedText" />
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="70dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_alignParentEnd="true"
+                            android:text="Active"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"
+                            app:fontFamily="@font/nunito_bold"
+                            tools:ignore="HardcodedText" />
+
+
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -71,12 +91,14 @@
                             tools:ignore="HardcodedText,ObsoleteLayoutParam" />
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/pac_pri"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             app:fontFamily="@font/opensans_bold"
                             android:layout_marginTop="5dp"
                             android:layout_marginStart="10dp"
+                            android:text="9999/-"
                             android:textColor="@color/white"
                             android:textSize="30sp"
                             tools:ignore="HardcodedText,ObsoleteLayoutParam" />
@@ -85,17 +107,21 @@
                     </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/pac_mon"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:text="6 months"
                         android:textColor="@color/white"
                         app:fontFamily="@font/nunito_bold"
                         android:textSize="20sp"
                         tools:ignore="HardcodedText" />
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/pac_des"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text=" One Month package offers you premium access to our state-of-the-art fitness facilities and exclusive amenities for a month-long period. Whether you're a fitness enthusiast seeking to achieve your goals or a beginner looking to kickstart your fitness journey, this package provides you with everything you need to succeed."
                         android:textColor="@color/white"
                         android:fontFamily="@font/nunito_semi_bold"
                         android:layout_marginTop="10dp"
