--- a/app/src/main/res/layout/diets_home_list_item.xml
+++ b/app/src/main/res/layout/diets_home_list_item.xml
@@ -45,7 +45,7 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/exercises_image"
+                        android:id="@+id/diet_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_centerHorizontal="true"
