--- a/app/src/main/res/layout/activity_workout_plan_vatical.xml
+++ b/app/src/main/res/layout/activity_workout_plan_vatical.xml
@@ -1,131 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/back_ground"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".WorkoutPlanVatical">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <ScrollView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                tools:ignore="MissingConstraints,ObsoleteLayoutParam,ScrollViewSize,UselessLeaf">
 
-                <RelativeLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/linearLayout"
+                    android:background="@color/dark_blue"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    tools:ignore="MissingConstraints,ObsoleteLayoutParam,ScrollViewSize,UselessLeaf">
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/linearLayout"
-                        android:background="@color/dark_blue"
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/text_workouts"
                         android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_alignParentEnd="true"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="20dp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:orientation="horizontal"
-                        tools:ignore="MissingConstraints">
+                        android:layout_alignParentEnd="true"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:text="@string/Workouts"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="HardcodedText" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/linearLayout"
+                    android:orientation="vertical">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@id/rl_customer_workouts">
 
                         <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/text_workouts"
+                            android:id="@+id/default_workout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingStart="20dp"
-                            android:layout_alignParentStart="true"
+                            android:text="@string/Default_workout"
                             android:layout_alignParentTop="true"
+                            android:layout_alignParentStart="true"
                             android:layout_alignParentEnd="true"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text="@string/Workouts"
-                            android:textColor="@color/white"
+                            android:textColor="@color/black"
                             android:textSize="24sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
+                            android:fontFamily="@font/opensans_bold"
                             tools:ignore="HardcodedText" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/linearLayout"
-                        android:orientation="vertical">
-
-
 
                         <RelativeLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_marginTop="20dp"
+                            android:layout_below="@+id/default_workout"
                             android:layout_alignParentStart="true"
                             android:layout_alignParentEnd="true"
-                            android:layout_below="@id/rl_customer_workouts">
+                            tools:ignore="UselessLeaf,UselessParent">
 
-                            <androidx.appcompat.widget.AppCompatTextView
-                                android:id="@+id/default_workout"
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/workout_plan_list"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="@string/Default_workout"
-                                android:layout_alignParentTop="true"
-                                android:layout_alignParentStart="true"
-                                android:layout_alignParentEnd="true"
-                                android:textColor="@color/black"
-                                android:textSize="24sp"
-                                android:fontFamily="@font/opensans_bold"
-                                tools:ignore="HardcodedText" />
+                                android:scrollbars="vertical"
+                                tools:listitem="@layout/my_workout_plans_list_item" />
 
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginTop="20dp"
-                                android:layout_below="@+id/default_workout"
-                                android:layout_alignParentStart="true"
-                                android:layout_alignParentEnd="true"
-                                tools:ignore="UselessLeaf,UselessParent">
-
-
-                                <androidx.recyclerview.widget.RecyclerView
-                                    android:id="@+id/workoutplanvatical_list"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:scrollbars="vertical"
-                                    tools:listitem="@layout/my_workout_plans_list_item" />
-
-                                <TextView
-                                    android:id="@+id/empty_text_view"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="No items to display"
-                                    android:textColor="@color/text"
-                                    android:textSize="20dp"
-                                    android:fontFamily="@font/nunito_bold"
-                                    android:visibility="gone"
-                                    />
-
-                            </RelativeLayout>
+                            <TextView
+                                android:id="@+id/empty_text_view"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="No items to display"
+                                android:textColor="@color/text"
+                                android:textSize="20dp"
+                                android:fontFamily="@font/nunito_bold"
+                                android:visibility="gone"
+                                />
 
                         </RelativeLayout>
 
-                    </LinearLayout>
+                    </RelativeLayout>
+
+                </LinearLayout>
 
 
-                </RelativeLayout>
+            </RelativeLayout>
 
-            </ScrollView>
+        </ScrollView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
