--- a/app/src/main/res/layout/activity_booking_list.xml
+++ b/app/src/main/res/layout/activity_booking_list.xml
@@ -94,6 +94,7 @@
                         tools:ignore="UselessLeaf,UselessParent">
 
                         <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/booking"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:scrollbars="vertical"
