--- a/app/src/main/res/layout/booking_list_item.xml
+++ b/app/src/main/res/layout/booking_list_item.xml
@@ -62,6 +62,7 @@
                         tools:ignore="UselessParent">
 
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tr_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Trainer name"
@@ -72,6 +73,7 @@
                             android:textColor="@color/black"
                             tools:ignore="HardcodedText,ObsoleteLayoutParam" />
                         <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/sp_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Specialization"
@@ -98,6 +100,7 @@
                     android:layout_marginBottom="5dp">
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/book_status"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="confirmed"
