--- a/app/src/main/res/layout/activity_achievements_list.xml
+++ b/app/src/main/res/layout/activity_achievements_list.xml
@@ -70,6 +70,7 @@
                 tools:ignore="UselessLeaf">
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/achieve_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbars="vertical"
