--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -105,7 +105,7 @@
                             tools:ignore="TooDeepLayout">
 
                             <ImageView
-                                android:id="@+id/show_image"
+                                android:id="@+id/user_acc_image"
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:scaleType="centerCrop"
