--- a/app/src/main/res/layout/activity_approved_trainer_profile.xml
+++ b/app/src/main/res/layout/activity_approved_trainer_profile.xml
@@ -32,6 +32,7 @@
 
 
         <ImageView
+            android:id="@+id/back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
@@ -307,7 +308,7 @@
                     tools:ignore="UselessLeaf">
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/trainer_review_txt"
+                        android:id="@+id/trainer_review_txt3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_bold"
@@ -326,6 +327,15 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentBottom="true">
+                        <RatingBar
+                            android:id="@+id/xml3_rating_bar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:numStars="5"
+                            android:stepSize="0.5"
+                            android:rating="2.5"
+                            android:layout_marginBottom="16dp"
+                            android:progressTint="@color/dark_cyan"/>
                     </RelativeLayout>
 
                 </RelativeLayout>
