--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -107,6 +107,15 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentBottom="true">
+                    <RatingBar
+                        android:id="@+id/xml2_rating_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:stepSize="0.5"
+                        android:rating="2.5"
+                        android:layout_marginBottom="16dp"
+                        android:progressTint="@color/dark_cyan"/>
                 </RelativeLayout>
 
             </RelativeLayout>
