--- a/app/src/main/res/layout/activity_create_workout_plan.xml
+++ b/app/src/main/res/layout/activity_create_workout_plan.xml
@@ -51,11 +51,11 @@
             android:layout_height="24dp"
             android:layout_marginEnd="10dp"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_popup_menu"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        <!--            android:src="@drawable/ic_popup_menu"-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -205,7 +205,7 @@
                                 android:layout_marginEnd="15dp"
                                 android:background="@drawable/text_bg"
                                 android:fontFamily="@font/opensans_bold"
-                                android:hint="@string/equipment"
+                                android:hint="equipment"
                                 android:inputType="text"
                                 android:padding="10dp"
                                 android:paddingStart="15dp"
@@ -254,7 +254,7 @@
                                 android:layout_marginBottom="20dp"
                                 android:background="@drawable/text_bg"
                                 android:fontFamily="@font/opensans_bold"
-                                android:hint="@string/body_part"
+                                android:hint="body_part"
                                 android:inputType="textEmailAddress"
                                 android:padding="10dp"
                                 android:paddingStart="15dp"
@@ -292,12 +292,12 @@
             android:layout_marginStart="25dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="25dp"
-            android:background="@drawable/btn_background"
+            android:background="@drawable/camera_bg"
             android:elevation="@dimen/button_elevation"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
             android:shadowColor="@color/black"
-            android:text="@string/Submit"
+            android:text="Submit"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"
             android:textStyle="bold"
