--- a/app/src/main/res/layout/activity_exercises.xml
+++ b/app/src/main/res/layout/activity_exercises.xml
@@ -114,7 +114,7 @@
                             android:layout_height="wrap_content">
 
                             <ImageView
-                                android:id="@+id/exe_image"
+                                android:id="@+id/exe_image2"
                                 android:layout_width="200dp"
                                 android:layout_height="200dp"
                                 android:layout_centerHorizontal="true"
