--- a/app/src/main/res/layout/rating_review_list_item.xml
+++ b/app/src/main/res/layout/rating_review_list_item.xml
@@ -52,6 +52,7 @@
                     tools:ignore="UselessParent">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/review_image"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentTop="true"
@@ -93,7 +94,7 @@
                     android:id="@+id/linner2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="100dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/trainer_rating_bg"
                     android:layout_alignParentEnd="true"
@@ -111,17 +112,6 @@
                         tools:ignore="HardcodedText,SmallSp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="10dp">
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2d ago"
-                        tools:ignore="HardcodedText" />
-                </LinearLayout>
 
                 </RelativeLayout>
 
