--- a/app/src/main/res/layout/my_workout_plans_home_list_item.xml
+++ b/app/src/main/res/layout/my_workout_plans_home_list_item.xml
@@ -28,9 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/card_view"
-                android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="20dp"
                 app:cardCornerRadius="20dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
@@ -42,6 +40,7 @@
                     android:layout_height="match_parent">
 
                     <ImageView
+                        android:scaleType="centerCrop"
                         android:id="@+id/exercises_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
