--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -206,7 +206,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
-                                android:text="@string/Workouts"
+                                android:text="@string/exercises"
                                 android:fontFamily="@font/opensans_bold"
                                 android:textSize="20sp"
                                 tools:ignore="HardcodedText,RelativeOverlap" />
