--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -130,6 +130,7 @@
                 tools:ignore="UselessLeaf">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/all_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_regular"
@@ -138,7 +139,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:textColor="@color/black"
-                    android:text="174 Ratings"
+                    android:text=""
                     tools:ignore="HardcodedText" />
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/revireshoew"
